fixed comp error (java 17)